--- a/shop/cart/cart.css
+++ b/shop/cart/cart.css
@@ -2,11 +2,11 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Merriweather', serif;
+  font-family:Helvetica,Arial,sans-serif;
 }
 
 body {
-  background-color: #dcebf4;
+  background-color: #eee;
 }
 
 body>div {
@@ -58,16 +58,24 @@ header a {
 }
 
 header {
-  height: 30vh;
-  background-image: url("../firstPage/background.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  margin: 0 auto;
-  position: sticky;
-  padding: 40px;
-  box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2), 0 8px 20px 0 rgba(0, 0, 0, 0.19);
+
+    background-image: url(../firstPage/background.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    padding: 40px;
+    box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2), 0 8px 20px 0 rgba(0, 0, 0, 0.19);
+}
+
+footer {
+  display: flex;
+justify-content: space-evenly;
+margin-top: 50px;
+background-color: #eee;
+padding: 71px;
+}
+
 }
 
 .cartImage {
@@ -91,7 +99,7 @@ header {
 }
 
 .heads {
-  font-size: 13px;
+  font-size: 16px;
   color: black;
   padding-top: 7px;
   margin: 0 8px;
@@ -104,18 +112,19 @@ header {
 
 #navBar {
   margin: 0 auto;
-  display: flex;
-  justify-content: flex-end;
-  background: linear-gradient(to bottom, #fff 20%, #DCEBF4 100%);
-  background-color: #DCEBF4;
-  border-radius: 4px;
-  border: 1px solid #DCEBF4;
-  color: #383544;
-  font-weight: bold;
-  text-decoration: none;
-  padding: 10px;
-  position: sticky;
-  top: 0;
+display: flex;
+justify-content: flex-end;
+background-color: #eee;
+border-radius: 4px;
+border: 1px solid #bcbcbc;
+color: #383544;
+font-weight: 500;
+text-decoration: none;
+padding: 10px;
+position: sticky;
+position: -webkit-sticky;
+top: 0;
+letter-spacing: 0.5px;
 }
 
 .image {
@@ -134,18 +143,18 @@ header {
 
 #title {
   background-color: #fff;
-  opacity: 0.7;
-  padding: 1.875rem;
-  line-height: 1.6;
-  font-family: 'Dancing Script', cursive;
-  margin: 0 auto;
-  text-align: center;
-  font-weight: bold;
-  font-size: 2rem;
-  letter-spacing: 0.1875rem;
-  transition: transform .6s;
-  text-shadow: 0 0 3px #4c1a2f;
-  box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2), 0 8px 20px 0 rgba(0, 0, 0, 0.19);
+      opacity: 0.7;
+      padding: 1.875rem;
+      line-height: 1.6;
+      font-family: 'Dancing Script', cursive;
+      margin: 0 auto;
+      text-align: center;
+      font-weight: bold;
+      font-size: 3rem;
+      letter-spacing: 0.1875rem;
+      transition: transform .6s;
+      box-shadow: 2px 3px 84px 16px rgba(0,0,0,1);
+      margin-top: 40px;
 }
 
 #title:hover {
@@ -216,12 +225,14 @@ hr {
 }
 
 #order-button {
-  background-color: #a59f9f;
-  padding: 5px;
-  border: none;
-  border-radius: 4px;
+  background-color: #9e9999;
+      padding: 10px;
+      border: none;
+      font-size: 15px;
+      color: #fff;
+      font-weight: 600;
 }
 
 #order-button:hover {
-  background-color: #506774;
+  background-color: #b51c1c;
 }
