--- a/shop/firstPage/firstPage.css
+++ b/shop/firstPage/firstPage.css
@@ -2,12 +2,10 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-family: 'Merriweather', serif;
+  font-family:Helvetica,Arial,sans-serif;
 }
 
-body {
-  background-color: #dcebf4;
-}
+
 
 body > div {
   background-color: #fff;
@@ -19,13 +17,12 @@ body > div {
 }
 
 header {
-  height: 30vh;
+  /* height: 40vh; */
   background-image: url("background.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  margin: 0 auto;
   padding: 40px;
   box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2), 0 8px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -39,17 +36,19 @@ header {
   margin: 0 auto;
   text-align: center;
   font-weight: bold;
-  font-size: 2rem;
+  font-size: 3rem;
   letter-spacing: 0.1875rem;
   transition: transform .6s;
-  text-shadow: 0 0 3px #4c1a2f;
-  box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2), 0 8px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 2px 3px 84px 16px rgba(0,0,0,1);
+  margin-top: 40px;
 }
 
 #title:hover {
   transform: scale(1.2);
-  opacity: 0.8;
-  text-shadow: 0 0 3px #4c1a2f;
+  opacity: 0.9;
+  text-shadow: 1px 1px 1px #4c1a2f;
+  box-shadow: inset 2px 2px 104px -51px rgba(0,0,0,1);
+
 }
 
 @media only screen and (max-width: 600px) {
@@ -92,27 +91,39 @@ header {
   justify-content: space-evenly;
 }
 
-#navBar {
-  position: sticky;
-  position: -webkit-sticky;
-  top: 0;
-}
+
 
 .details button {
-  box-shadow: 3px 4px 0px 0px #fcfcfc;
-  background: linear-gradient(to bottom, #fff 5%, #DCEBF4 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ededed', endColorstr='#bab1ba', GradientType=0);
-  background-color: #DCEBF4;
-  border-radius: 9px;
-  border: 1px solid #DCEBF4;
+
+  border: 2px solid black;
   display: inline-block;
   cursor: pointer;
-  color: #383544;
-  font-weight: bold;
-  font-size: 12px;
-  padding: 6px 20px;
+  font-weight: bolder;
+  font-size: 16px;
+  padding: 10px 22px;
   text-decoration: none;
-  text-shadow: 0px 1px 0px #a0c1d3;
+  background-color: #fff;
+}
+
+.details button:hover {
+  background-color: #6d1015;
+  color:#fff;
+  border: 2px solid #6d1015;
+  box-shadow: 8px 8px 8px 0 rgba(0, 0, 0, 0.2), 8px 8px 20px 0 rgba(0, 0, 0, 0.19);
+
+}
+
+.product {
+  border: 2px solid black;
+  margin: 5px;
+  padding: 20px;
+}
+
+.product:hover {
+  border: 2px solid #b4000b;
+  box-shadow: 8px 8px 8px 0 rgba(0, 0, 0, 0.2), 8px 8px 20px 0 rgba(0, 0, 0, 0.19);
+
+
 }
 
 .details input:hover {
@@ -161,4 +172,76 @@ header {
   margin-top: 6px;
   font-size: 13px;
   color: #000000;
+}
+
+.hidden {
+  display: none;
+}
+
+#loading img {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  margin: auto;
+  width: 150px;
+  height: 150px;
+}
+
+.cartImage {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url("https://png.pngtree.com/svg/20161205/b5dbd4fc8b.png")
+}
+
+.adminImage {
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-image: url("http://simpleicon.com/wp-content/uploads/lock-8.png")
+}
+
+#nr-of-prod-in-cart {
+  margin-left: 6px;
+  margin-top: 6px;
+  font-size: 13px;
+  color: #000000;
+}
+
+.heads {
+  font-size: 16px;
+  color: black;
+  padding-top: 7px;
+  margin: 0 8px;
+}
+
+#navBar a {
+  text-decoration: none;
+  color: black;
+
+}
+
+#navBar {
+  margin: 0 auto;
+  display: flex;
+  justify-content: flex-end;
+  background-color: #eee;
+  border-radius: 4px;
+  border: 1px solid #bcbcbc;
+  color: #383544;
+  font-weight: 500;
+  text-decoration: none;
+  padding: 10px;
+  position: sticky;
+  position: -webkit-sticky;
+  top: 0;
+  letter-spacing: 0.5px;
 }
